# task-5-create-the-python-package

./: README.md  pyproject.toml
counter_app/: __init__.py  number_of_unique_characters.py
